--- a/Serialization.Net/Serialization.Net.csproj
+++ b/Serialization.Net/Serialization.Net.csproj
@@ -1,20 +1,28 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net60;netcoreapp3.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <RootNamespace>Staticsoft.$(MSBuildProjectName)</RootNamespace>
   </PropertyGroup>
-  
+
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <Compile Include="..\Compatibility\IsExternalInit.cs" Link="IsExternalInit.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Staticsoft.Extensions.DependencyInjection" Version="1.0.0-1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Serialization.Abstractions\Serialization.Abstractions.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Staticsoft.$(MSBuildProjectName)</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/Staticsoft/JsonSerialization</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Staticsoft/Serialization</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
